--- a/progressus/principal/Progressus/gerente.html
+++ b/progressus/principal/Progressus/gerente.html
@@ -52,6 +52,7 @@
 						</ul>
 					</li>
 					<li><a href="contact.php">Change Status</a></li>
+				<!--	<li><a href="../index.html">Log Out</a></li>  -->
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
