--- a/progressus/principal/contact.html
+++ b/progressus/principal/contact.html
@@ -106,7 +106,7 @@ function valida(e){
 						<br>
 						<div class="row">
 							<div class="col-sm-12">
-								<textarea placeholder="Escribe tu mensaje detallando tu solicitud." class="form-control" name="tex" rows="9"></textarea>
+								<textarea placeholder="Escribe tu mensaje detallando tu solicitud." class="form-control" name="descripcion" maxlength="4900" rows="9"></textarea>
 							</div>
 						</div>
 						<br>
